--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input id="userText" type="text" placeholder="Enter text or url"  />
           </div>
           <div class="qrcodeContainer">
-            <p class="msgText">Your Qr code will be here</p>
+            <p class="msgText">Your QR code will be here</p>
             <img src="" id="qrImg">
           </div>
           <div class="submitbtn">
